# syntrallm

./: Dockerfile  LICENSE  README.md  docker-compose.yml  model_card.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_text.txt
scripts/: convert_to_hf.py  inference.py  inference_server.py  train.py  train_tokenizer.py  upload_to_hf.sh
src/syntra_llm/: __init__.py  model.py  tokenizer.py
tests/: test_inference.py
