[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syntra-llm"
version = "0.1.0"
description = "Syntra: A small LLM project rebranded from deepseek_r1"
authors = [{name = "Syntra Team"}]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.15.0",
    "tokenizers>=0.13.0",
    "datasets>=2.10.0",
    "accelerate>=0.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]